# protocol_to_crf_generator

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  README.md  TASKS.md  design.md  mkdocs.yml  pyproject.toml  requirements.in  requirements.md  requirements.txt  setup.cfg  tasks_startup.md  todo_docs.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  cla.yml  ct-update.yml  docs.yml  main.yml  rotate_secrets.yml  zap_scan.yml
deploy/: .env.example  docker-compose.staging.yml  docker-compose.yml
docs/: CDISC CRF Generation Technical Plan_.md  evaluating_ai_models.md  github_models.md  index.md  integrating_ai_models.md  optimizing_with_models.md  prototyping_with_ai_models.md  storing_prompts.md  table-of-contents.md
docs/2_Requirements/: functional_spec_protocol_ingestion.md
docs/3_architecture+design/: stakeholders-raci.md
docs/adr/: 0001-system-architecture.md  0002-canonical-ir.md  README.md
docs/ops/: rotate-secrets.md  staging-setup.md  tls-setup.md
docs/security/: advisory-2025-1234.md
protocol_to_crf_generator/: __init__.py  __main__.py  ct_cache.py  ct_update.py
scripts/: rotate_secrets.py  validate_markdown.py
signatures/: cla.json
tests/: test_api.py  test_cli.py  test_cli_ingest.py  test_ct_cache.py  test_ct_update.py  test_docker_build.py  test_docx_importer.py  test_extract.py  test_health.py  test_logging.py  test_mapping.py  test_models.py  test_placeholder.py  test_rate_limit.py  test_storage.py  test_validation.py  test_validation_report.py
(+66 files in other folders)
