[tool.ruff]
line-length = 88

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "locust.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=protocol_to_crf_generator"

[tool.coverage.run]
source = ["protocol_to_crf_generator"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
