[tool.ruff]
line-length = 88

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "locust.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jsonschema.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--cov=protocol_to_crf_generator"

[tool.coverage.run]
source = ["protocol_to_crf_generator"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "protocol_to_crf_generator"
requires-python = ">=3.11"
dynamic = ["version"]

[tool.setuptools]
packages = ["protocol_to_crf_generator"]

[tool.setuptools.dynamic]
version = {attr = "protocol_to_crf_generator.__version__"}
